data/raw_logs/lexical/lex_1.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_1.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_1.c:1:24: error: stray '\' in program
    1 | int main() { int x = 5 \ 2; }
      |                        ^
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_1.c:1:26: error: expected ',' or ';' before numeric constant
    1 | int main() { int x = 5 \ 2; }
      |                          ^
